k8s-235/apps/jenkins/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-http01-prod"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - jenkins.nhackindustries.com
    secretName: jenkins-nhackindustries-com-tls
  rules:
  - host: jenkins.nhackindustries.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  externalName: jenkins-int.nhackindustries.com
  type: ExternalName
